# cupel

./: .gitignore  LICENSE  README.md  _env.example  config.example.yml  config.yml  install.sh  pyproject.toml
cupel/: __init__.py  __main__.py  cli.py  config.py  discovery.py  display.py  eval.py  server.py
cupel/data/: example-run.json  starter-eval-set.json
cupel/ui/: index.html  style.css
cupel/ui/pages/: author.js  dashboard.js  evalset.js  results.js  run.js  settings.js
site/: _redirects  index.html
tests/: conftest.py  test_config.py  test_eval.py
